--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-redux": "^7.1.18",
     "@types/react-router-dom": "^5.3.0",
     "antd": "^4.16.13",
+    "json-server": "^0.17.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
