--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-redux": "^7.1.18",
     "@types/react-router-dom": "^5.3.0",
     "antd": "^4.16.13",
+    "http-proxy-middleware": "^2.0.1",
     "json-server": "^0.17.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -24,6 +25,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:sit": "sh -ac '. .env.sit; react-scripts start'",
+    "start:prod": "sh -ac '. .env.production; react-scripts start'",
+    "start:json": "json-server -p 3080 -w db.json --routes routes.json",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
