--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-redux": "^7.1.18",
     "@types/react-router-dom": "^5.3.0",
     "antd": "^4.16.13",
+    "clsx": "^1.1.1",
     "http-proxy-middleware": "^2.0.1",
     "json-server": "^0.17.0",
     "react": "^17.0.2",
